--- a/HairSale/Views/Shared/_Layout.cshtml
+++ b/HairSale/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>@ViewBag.Title</title>
-    @*<base href="https://papahair.by/">*@
+    <base href="Localhost">
     <meta name="description" content="Продажа натуральных волос для наращивания в Минске и Минской области -  ✔ помощь в подборе длины и цвета, ✔ доставка по всей РБ, ✔ высокое качество, ✔ низкие цены!">
     <meta name="keywords" content="натуральные волосы, наращивание, купить, продать, заказать, под заказ, цена, стоимость, Минск, Минская область, PapaHair">
     <meta name="yandex-verification" content="64032f00fa8fd7ce">
@@ -70,8 +70,7 @@
                     <li><a href="tg://resolve?domain=papahair" target="_blank" title="Telegram"><i class="fa fa-telegram"></i></a></li>
                     <li><a href="viber://add?number=375336711322" target="_blank" title="Viber"><i class="fa fa-viber" style="font-family: fontawesome !important"></i></a></li>
                     <li><a href="//api.whatsapp.com/send?phone=375336711322" target="_blank" title="WhatsApp"><i class="fa fa-whatsapp"></i></a></li>
-                    <li><a href="https://www.instagram.com/papa.hair/" target="_blank" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#" target="_blank" title="Viber"><i class="fa-viber"></i></a></li>
+                    <li><a href="https://www.instagram.com/papa.hair/" target="_blank" title="Instagram"><i class="fa fa-instagram"></i></a></li>                 
                 </ul>
             </div>
         </div>
@@ -81,7 +80,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div id="logo">
-                        <a href="https://papahair.by/"><img src="~/Content/Images/logo.png" title="PapaHair.by" alt="PapaHair.by" class="img-responsive"></a>
+                        <a href="http://localhost/HairSale"><img src="~/Content/Images/logo.png" title="PapaHair.by" alt="PapaHair.by" class="img-responsive"></a>
                     </div>
                 </div>
             </div>          
@@ -100,8 +99,8 @@
                         <div class="dropdown-menu" style="">
                             <div class="dropdown-inner">
                                 <ul class="list-unstyled">
-                                    <li><a href="https://papahair.by/slavyanskie-volosy/">Славянские волосы</a></li>
-                                    <li><a href="https://papahair.by/yuzhno-russkie-volosy/">Южно-русские волосы</a></li>
+                                    <li><a href="~/Home/Catalog/">Славянские волосы</a></li>
+                                    <li><a href="~/Home/Catalog">Южно-русские волосы</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -112,21 +111,21 @@
                         <div class="dropdown-menu" style="">
                             <div class="dropdown-inner">
                                 <ul class="list-unstyled">
-                                    <li><a href="/skupka-volos-v-minske">Скупка волос в Минске</a></li>
-                                    <li><a href="/skupka-volos-v-breste">Скупка волос в Бресте</a></li>
-                                    <li><a href="/skupka-volos-v-vitebske">Скупка волос в Витебске</a></li>
-                                    <li><a href="/skupka-volos-v-gomele">Скупка волос в Гомеле</a></li>
-                                    <li><a href="/skupka-volos-v-grodno">Скупка волос в Гродно</a></li>
-                                    <li><a href="/skupka-volos-v-mogileve">Скупка волос в Могилеве</a></li>
+                                    <li><a href="~/Home/BuyingHair">Скупка волос в Минске</a></li>
+                                    <li><a href="~/Home/BuyingHair">Скупка волос в Бресте</a></li>
+                                    <li><a href="~/Home/BuyingHair">Скупка волос в Витебске</a></li>
+                                    <li><a href="~/Home/BuyingHair">Скупка волос в Гомеле</a></li>
+                                    <li><a href="~/Home/BuyingHair">Скупка волос в Гродно</a></li>
+                                    <li><a href="~/Home/BuyingHair">Скупка волос в Могилеве</a></li>
                                 </ul>
                             </div>
                         </div>
                     </li>
 
-                    <li><a href="/oplata-i-dostavka">Оплата и доставка</a></li>
-                    <li><a href="/otzyvy">Отзывы</a></li>
-                    <li><a href="/o-nas">О нас</a></li>
-                    <li><a href="/kontakty">Контакты</a></li>
+                    <li><a href="~/Home/PaymentAndDelivery">Оплата и доставка</a></li>
+                    <li><a href="~/Home/Reviews">Отзывы</a></li>
+                    <li><a href="~/Home/About">О нас</a></li>
+                    <li><a href="~/Home/Contacts">Контакты</a></li>
                 </ul>
             </div>
         </nav>
@@ -174,19 +173,19 @@
                     <p>УНП 692141529</p>
                     <p>Регистрация:<br> Минский райисполкомом<br> 01.06.2019 г. №0696944</p>
                     <ul class="list-unstyled">
-                        <li><a href="/sitemap">Карта сайта</a></li>
+                        <li><a href="~/Home/SiteMap">Карта сайта</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4">
                     <div class="footer-title h4 yellow">Покупателям</div>
                     <ul class="list-unstyled">
-                        <li><a href="/o-nas">О нас</a></li>
-                        <li><a href="/vopros-otvet">Вопрос-ответ</a></li>
-                        <li><a href="/kak-kupit">Как купить</a></li>
-                        <li><a href="/oplata-i-dostavka">Оплата и доставка</a></li>
-                        <li><a href="/pochemu-my">Почему мы</a></li>
-                        <li><a href="/vozvrat-tovara">Возврат товара</a></li>
-                        <li><a href="/kontakty">Контакты</a></li>
+                        <li><a href="~/Home/About">О нас</a></li>
+                        <li><a href="~/Home/QuestionAndAnswers">Вопрос-ответ</a></li>
+                        <li><a href="~/Home/HowToBuy">Как купить</a></li>
+                        <li><a href="~/Home/PaymentAndDelivery">Оплата и доставка</a></li>
+                        <li><a href="~/Home/WhyWe">Почему мы</a></li>
+                        <li><a href="~/Home/Refund">Возврат товара</a></li>
+                        <li><a href="~/Home/Contacts">Контакты</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 footer-contacts">
