--- a/HairSale/Views/Shared/_Layout.cshtml
+++ b/HairSale/Views/Shared/_Layout.cshtml
@@ -80,7 +80,8 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div id="logo">
-                        <a href="http://localhost/HairSale"><img src="~/Content/Images/logo.png" title="PapaHair.by" alt="PapaHair.by" class="img-responsive"></a>
+                         
+                        <a href="http://localhost/HairSale"><img src="~/Content/Images/bbb/logo4.jpg" title="PapaHair.by" alt="PapaHair.by" class="img-responsive"></a>
                     </div>
                 </div>
             </div>          
@@ -100,7 +101,7 @@
                             <div class="dropdown-inner">
                                 <ul class="list-unstyled">
                                     <li><a href="~/Home/Catalog/">Славянские волосы</a></li>
-                                    <li><a href="~/Home/Catalog">Южно-русские волосы</a></li>
+                                    <li><a href="~/Home/Catalog/">Южно-русские волосы</a></li>
                                 </ul>
                             </div>
                         </div>
