--- a/HairSale/Views/Home/BuyingHair.cshtml
+++ b/HairSale/Views/Home/BuyingHair.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Скупка волос в Минске";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 
