--- a/HairSale/Views/Home/Contacts.cshtml
+++ b/HairSale/Views/Home/Contacts.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Контакты";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 <div id="information-contact" class="container">
