--- a/HairSale/Views/Home/QuestionAndAnswers.cshtml
+++ b/HairSale/Views/Home/QuestionAndAnswers.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "QuestionAndAnswers";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 <div id="information-faq" class="container">
