--- a/HairSale/Views/Home/Reviews.cshtml
+++ b/HairSale/Views/Home/Reviews.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Отзывы";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 <div id="otzyvy" class="container">
