--- a/HairSale/Views/Home/Catalog.cshtml
+++ b/HairSale/Views/Home/Catalog.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Catalog";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 <div id="product-category" class="container">
