--- a/HairSale/Views/Home/SiteMap.cshtml
+++ b/HairSale/Views/Home/SiteMap.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "SiteMap";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 <div id="information-sitemap" class="container">
