--- a/HairSale/Views/Home/WhyWe.cshtml
+++ b/HairSale/Views/Home/WhyWe.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "WhyWe";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
 }
 
 <div id="information-information" class="container">
