--- a/HairSale/Views/Shared/_SiteLayout.cshtml
+++ b/HairSale/Views/Shared/_SiteLayout.cshtml
@@ -8,19 +8,19 @@
     <base href="Localhost">
     <meta name="description" content="Продажа натуральных волос для наращивания в Минске и Минской области -  ✔ помощь в подборе длины и цвета, ✔ доставка по всей РБ, ✔ высокое качество, ✔ низкие цены!">
     <meta name="keywords" content="натуральные волосы, наращивание, купить, продать, заказать, под заказ, цена, стоимость, Минск, Минская область, PapaHair">
-    <meta name="yandex-verification" content="64032f00fa8fd7ce">
+    @*<meta name="yandex-verification" content="64032f00fa8fd7ce">*@
 
     @*<script src="https://connect.facebook.net/signals/config/1274499339399697?v=2.9.24&amp;r=stable" async=""></script>
-    <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
-    <script async="" src="https://mc.yandex.ru/metrika/tag.js"></script>
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-WN75XXZ"></script>*@
+        <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
+        <script async="" src="https://mc.yandex.ru/metrika/tag.js"></script>
+        <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+        <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-WN75XXZ"></script>*@
 
 
     @*<script src="~/Scripts/jquery-3.5.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen" />
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />*@
+        <script src="~/Scripts/bootstrap.min.js"></script>
+        <link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen" />
+        <link href="~/Content/font-awesome.min.css" rel="stylesheet" />*@
 
     @*<script src="catalog/view/javascript/jquery/jquery-2.1.1.min.js" type="text/javascript"></script>
         <link href="catalog/view/javascript/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -28,18 +28,29 @@
     @*<link href="catalog/view/javascript/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">*@
     <script src="~/myadd/jquery-2.1.1.min.js"></script>
     <script src="~/myadd/bootstrap.min.js"></script>
+    <script src="~/myadd/MainPageOperations.js"></script>
     <link href="~/myadd/bootstrap.min.css" rel="stylesheet" />
+    @*иконки*@
     <link href="~/myadd/font-awesome.min.css" rel="stylesheet" />
-
+    @*шрифт*@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,300,700" rel="stylesheet" type="text/css">
-    <link href="~/myadd/oneclick.css" rel="stylesheet" media="screen" />
+
+    @*хз*@
+    @*<link href="~/myadd/oneclick.css" rel="stylesheet" media="screen" />*@
+    @*оформление*@
     <link href="~/myadd/stylesheet.css" rel="stylesheet" />
-    <link href="~/myadd/instagram.css" rel="stylesheet" media="screen" />
+
+    @*<link href="~/myadd/instagram.css" rel="stylesheet" media="screen" />
+
     <script src="~/myadd/jquery.magnific-popup.new.min.js"></script>
+
     <link href="~/myadd/magnific-popup.new.css" rel="stylesheet" media="screen" />
+
     <script src="~/myadd/script.js" type="text/javascript"></script>
+
     <script src="~/myadd/common.js" type="text/javascript"></script>
-    <script src="~/myadd/validator.min.js"></script>
+
+    <script src="~/myadd/validator.min.js"></script>*@
 
     @*<link href="catalog/view/theme/default/stylesheet/stylesheet.css" rel="stylesheet">*@
     @*<link href="catalog/view/javascript/jquery/instagram-rdr/instagram.css" type="text/css" rel="stylesheet" media="screen">*@
@@ -54,7 +65,7 @@
 
 
 
-    
+
 </head>
 <body>
     <nav id="top">
@@ -81,7 +92,7 @@
                 <div class="col-sm-12">
                     <div id="logo">
                          
-                        <a href="http://localhost/HairSale"><img src="~/Content/Images/bbb/logo4.jpg" title="PapaHair.by" alt="PapaHair.by" class="img-responsive"></a>
+                        <a href="http://localhost/HairSale"><img src="~/Content/Images/bbb/logo3.jpg" title="PapaHair.by" alt="PapaHair.by" class="img-responsive"></a>
                     </div>
                 </div>
             </div>          
@@ -101,7 +112,7 @@
                             <div class="dropdown-inner">
                                 <ul class="list-unstyled">
                                     <li><a href="~/Home/Catalog/">Славянские волосы</a></li>
-                                    <li><a href="~/Home/Catalog/">Южно-русские волосы</a></li>
+                                    <li><a href="~/Home/CatalogGood/">Правильный каталог</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -133,11 +144,8 @@
         <ul class="list-inline pull-right">
             <li>
                 <div id="cart" class="btn-block">
-                    <button type="button" data-toggle="dropdown" data-loading-text="Загрузка..." class="cart-btn"><i class="fa fa-shopping-bag yellow"></i><span id="cart-total" class="relative"><span class="count-items">0</span> <span class="cost-items">0.00</span></span></button>
-                    <ul class="dropdown-menu pull-right">
-                        <li>
-                            <p class="text-center">Ваша корзина пуста!</p>
-                        </li>
+                    <button type="button" data-toggle="dropdown" data-loading-text="Загрузка..." class="cart-btn"><i class="fa fa-shopping-bag yellow"></i><span id="cart-total" class="relative"><span class="count-items">0</span> <span class="cost-items">0</span></span></button>
+                    <ul class="dropdown-menu pull-right" id="BasketList">                     
                     </ul>
                 </div>
             </li>
@@ -281,7 +289,7 @@
 
 
 
-    <script type="text/javascript" id="">(function (a, e, f, g, b, c, d) { a[b] = a[b] || function () { (a[b].a = a[b].a || []).push(arguments) }; a[b].l = 1 * new Date; c = e.createElement(f); d = e.getElementsByTagName(f)[0]; c.async = 1; c.src = g; d.parentNode.insertBefore(c, d) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(55486963, "init", { clickmap: !0, trackLinks: !0, accurateTrackBounce: !0, webvisor: !0, ecommerce: "dataLayer" });</script>
+    @*<script type="text/javascript" id="">(function (a, e, f, g, b, c, d) { a[b] = a[b] || function () { (a[b].a = a[b].a || []).push(arguments) }; a[b].l = 1 * new Date; c = e.createElement(f); d = e.getElementsByTagName(f)[0]; c.async = 1; c.src = g; d.parentNode.insertBefore(c, d) })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(55486963, "init", { clickmap: !0, trackLinks: !0, accurateTrackBounce: !0, webvisor: !0, ecommerce: "dataLayer" });</script>
     <noscript><div><img src="https://mc.yandex.ru/watch/55486963" style="position:absolute; left:-9999px;" alt=""></div></noscript>
 
     <script type="text/javascript" id="">!function (b, e, f, g, a, c, d) { b.fbq || (a = b.fbq = function () { a.callMethod ? a.callMethod.apply(a, arguments) : a.queue.push(arguments) }, b._fbq || (b._fbq = a), a.push = a, a.loaded = !0, a.version = "2.0", a.queue = [], c = e.createElement(f), c.async = !0, c.src = g, d = e.getElementsByTagName(f)[0], d.parentNode.insertBefore(c, d)) }(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js"); fbq("init", "1274499339399697"); fbq("track", "PageView");</script>
@@ -289,6 +297,6 @@
         <img height="1" width="1" src="https://www.facebook.com/tr?id=1274499339399697&amp;ev=PageView
 &amp;noscript=1">
     </noscript>
-    <iframe name="ym-native-frame" title="ym-native-frame" frameborder="0" aria-hidden="true" style="opacity: 0 !important; width: 0px !important; height: 0px !important; position: absolute !important; left: 100% !important; bottom: 100% !important; border: 0px !important;"></iframe><ym-measure class="ym-viewport" style="display: block; top: 0px; right: 0px; bottom: 0px; left: 0px; height: 100vh; width: 100vw; position: fixed; transform: translate(0px, -100%); transform-origin: 0px 0px;"></ym-measure><ym-measure class="ym-zoom" style="bottom: 100%; position: fixed; width: 100vw;"></ym-measure>
+    <iframe name="ym-native-frame" title="ym-native-frame" frameborder="0" aria-hidden="true" style="opacity: 0 !important; width: 0px !important; height: 0px !important; position: absolute !important; left: 100% !important; bottom: 100% !important; border: 0px !important;"></iframe><ym-measure class="ym-viewport" style="display: block; top: 0px; right: 0px; bottom: 0px; left: 0px; height: 100vh; width: 100vw; position: fixed; transform: translate(0px, -100%); transform-origin: 0px 0px;"></ym-measure><ym-measure class="ym-zoom" style="bottom: 100%; position: fixed; width: 100vw;"></ym-measure>*@
 </body>
 </html>
