--- a/HairSale/Views/Admin/AdminPage.cshtml
+++ b/HairSale/Views/Admin/AdminPage.cshtml
@@ -5,29 +5,51 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
+    <script src="~/Scripts/popper.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/myadd/myscript.js"></script>
+    <link href="~/Content/StyleSheetForAdminPage.css" rel="stylesheet" />
+    <link href="~/myadd/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container-fluid">
-        <button id="AdminPageHairButton" class="m-1">
-            Hairs
-        </button>
+    <div class="container m-1">
 
-        <button id="AdminPageUserButton" class="m-1">
-            Users
-        </button>
+        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+            <button type="button" id="AdminPageUserButton" class="btn btn-secondary">Users</button>
+            <button type="button" id="AdminPageOrderButton" class="btn btn-secondary">Orders</button>
 
-        <button id="AdminPageOrderButton" class="m-1">
-            Orders
-        </button>
+            <div class="btn-group" role="group">
+                <button id="btnGroupDrop" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hair</button>
+
+                <div class="dropdown-menu" aria-labelledby="btnGroupDrop">
+                    <button class="dropdown-item" id="AdminPageHairButton">Hair</button>
+                    <button class="dropdown-item" id="AdminPageHairLengthButton">Hair Length</button>
+                    <button class="dropdown-item" id="AdminPageHairColorButton">Hair Color</button>
+                </div>
+            </div>
+        </div>
+
+        @*<button id="AdminPageHairButton" class="m-1">
+                Hairs
+            </button>
+
+            <button id="AdminPageUserButton" class="m-1">
+                Users
+            </button>
+
+            <button id="AdminPageOrderButton" class="m-1">
+                Orders
+            </button>*@
     </div>
-    
+    <div class="container m-1 text-center" id="AdminPageTable"></div>
 
-    <div class="container-fluid" id="AdminPageTable">
-
+    <!-- Add length and color modal window -->
+    <div class="modal fade" id="modalwindow" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div id="modal-content" class="modal-dialog modal-sm">           
+        </div>
     </div>
+
 
 </body>
 </html>
