--- a/HairSale/Views/Home/CatalogGood.cshtml
+++ b/HairSale/Views/Home/CatalogGood.cshtml
@@ -10,7 +10,7 @@
     @foreach(HairItem item in Model)
     {
     <div class="container border border-light">
-        <p><img alt="@item.Id" src="data:image/jpg;base64,@Convert.ToBase64String(item.HairImage.Data)" /></p>
+        <p><img alt="@item.Id" src="@item.HairImage" /></p>
         <p>@item.Name</p>
         <p>@item.Price</p>
         <p><button class="btn btn-default" onclick="AddItemToBasket(@item.Id,1)"> В корзину</button></p>
