--- a/HairSale/Views/Hair/GetHairs.cshtml
+++ b/HairSale/Views/Hair/GetHairs.cshtml
@@ -17,7 +17,7 @@ else
         @foreach (HairItem item in Model)
         {
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                <img id="@item.Id" src="data:text/plain;base64,@Convert.ToBase64String(item.HairImage.Data)" />
+                <img id="@item.Id" src="@item.HairImage" />
                 <p>Name: @item.Name</p>
                 <p>Price : @item.Price</p>
                 <button class="btn btn-success" onclick="DeleteHair(@item.Id)">Delete</button>
