--- a/HairSale/myadd/stylesheet.css
+++ b/HairSale/myadd/stylesheet.css
@@ -1,10 +1,12 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 500;
-    color: #444;
-    font-size: 14px;
-    line-height: 24px;
+	color: #444;
+	font-size: 14px;
+	line-height: 24px;
 	width: 100%;
+	max-width: 100%;
+	overflow-x: hidden
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, b, strong {
 	color: #444;
